--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,17 @@ dependencies {
     implementation 'com.facebook.android:facebook-android-sdk:11.2.0'
     implementation 'com.facebook.android:facebook-applinks:11.2.0'
 
+    implementation 'androidx.ads:ads-identifier:1.0.0-alpha01'
+
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.2'
+
+    implementation 'io.reactivex.rxjava3:rxjava:3.1.5'
+    implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
+
+    implementation 'androidx.multidex:multidex:2.0.1'
+
 }
